fixing errors for embeded a tags and colour contrast

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Limelight&display=swap');
 
 
+
 html, body {
   height: 100%;
   width: 100%;
@@ -9,8 +10,10 @@ html, body {
   color: #222;
 }
 
-.navbar {
-  padding: 0.8rem;
+#root {
+background-color: #c7c6c6;
+min-height: 100vh;
+margin: 0;
 }
 
 .logo {
